--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,33 @@
 # Required: one provider key
 ANTHROPIC_API_KEY=
+ANTHROPIC_OAUTH_TOKEN=
 OPENAI_API_KEY=
 
+# Identity
+CLAWSOME_CHATSDK_USERNAME=mick
+CLAWSOME_CHATSDK_PORT=8787
+CLAWSOME_TRIGGER_PATTERNS=@Mick
+
+# Model
+CLAWSOME_MODEL_PROVIDER=anthropic
+CLAWSOME_MODEL=claude-sonnet-4-20250514
+
 # Runtime
-NANO_PI_MODEL_PROVIDER=anthropic
-NANO_PI_MODEL=claude-sonnet-4-20250514
-NANO_PI_TRIGGER=@Mick
-NANO_PI_DB_PATH=.nano-pi/state.db
-# Per-session environment root (one workspace per chat thread)
-NANO_PI_GROUPS_DIR=.nano-pi/groups
-NANO_PI_MAX_CONCURRENCY=2
-NANO_PI_LOG_LEVEL=info
+CLAWSOME_DATA_DIR=.clawsome
+CLAWSOME_MAX_CONCURRENCY=2
+CLAWSOME_LOG_LEVEL=info
 
-# Containerized agent runtime (always on)
-NANO_PI_AGENT_CONTAINER_IMAGE=oven/bun:1.3
-# Optional: docker image used by bash tool sandbox inside agent runtime
-NANO_PI_SANDBOX_IMAGE=node:22-alpine
+# Containerized agent runtime
+CLAWSOME_AGENT_CONTAINER_IMAGE=oven/bun:1.3
 
-# Chat SDK server
-NANO_PI_CHATSDK_PORT=8787
-NANO_PI_CHATSDK_USERNAME=mick
-# Mount host global pi environment into container (/home/node/.pi/agent)
-NANO_PI_PI_AGENT_DIR=/Users/michaelliv/.pi/agent
+# Optional: pi auth file path (default: <dataDir>/global/auth.json)
+# CLAWSOME_AUTH_PATH=
+
+# Optional: admin caller IDs (comma-separated)
+# CLAWSOME_ADMINS=
+
+# WhatsApp ingress (Baileys socket)
+CLAWSOME_ENABLE_WHATSAPP=false
 
 # Optional Slack ingress
 SLACK_BOT_TOKEN=
@@ -32,9 +38,5 @@ DISCORD_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
 DISCORD_APPLICATION_ID=
 DISCORD_MENTION_ROLE_IDS=
-NANO_PI_DISCORD_GATEWAY_DURATION_MS=600000
-NANO_PI_DISCORD_GATEWAY_SECRET=
-
-# Optional WhatsApp ingress (Baileys socket)
-NANO_PI_ENABLE_WHATSAPP=true
-NANO_PI_WHATSAPP_AUTH_DIR=.nano-pi/whatsapp-auth
+CLAWSOME_DISCORD_GATEWAY_DURATION_MS=600000
+CLAWSOME_DISCORD_GATEWAY_SECRET=
