feat: add CLAWSOME_WHATSAPP_AUTH_DIR env var override

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,7 @@ CLAWSOME_AGENT_CONTAINER_IMAGE=oven/bun:1.3
 
 # WhatsApp ingress (Baileys socket)
 CLAWSOME_ENABLE_WHATSAPP=false
+# CLAWSOME_WHATSAPP_AUTH_DIR=  # default: <dataDir>/whatsapp-auth
 
 # Optional Slack ingress
 SLACK_BOT_TOKEN=
