--- a/.env.example
+++ b/.env.example
@@ -4,31 +4,31 @@ ANTHROPIC_OAUTH_TOKEN=
 OPENAI_API_KEY=
 
 # Identity
-CLAWSOME_CHATSDK_USERNAME=mick
-CLAWSOME_CHATSDK_PORT=8787
-CLAWSOME_TRIGGER_PATTERNS=@Mick
+CLAWBBER_CHATSDK_USERNAME=mick
+CLAWBBER_CHATSDK_PORT=8787
+CLAWBBER_TRIGGER_PATTERNS=@Mick
 
 # Model
-CLAWSOME_MODEL_PROVIDER=anthropic
-CLAWSOME_MODEL=claude-sonnet-4-20250514
+CLAWBBER_MODEL_PROVIDER=anthropic
+CLAWBBER_MODEL=claude-sonnet-4-20250514
 
 # Runtime
-CLAWSOME_DATA_DIR=.clawsome
-CLAWSOME_MAX_CONCURRENCY=2
-CLAWSOME_LOG_LEVEL=info
+CLAWBBER_DATA_DIR=.clawbber
+CLAWBBER_MAX_CONCURRENCY=2
+CLAWBBER_LOG_LEVEL=info
 
 # Containerized agent runtime
-CLAWSOME_AGENT_CONTAINER_IMAGE=oven/bun:1.3
+CLAWBBER_AGENT_CONTAINER_IMAGE=clawbber-agent:latest
 
 # Optional: pi auth file path (default: <dataDir>/global/auth.json)
-# CLAWSOME_AUTH_PATH=
+# CLAWBBER_AUTH_PATH=
 
 # Optional: admin caller IDs (comma-separated)
-# CLAWSOME_ADMINS=
+# CLAWBBER_ADMINS=
 
 # WhatsApp ingress (Baileys socket)
-CLAWSOME_ENABLE_WHATSAPP=false
-# CLAWSOME_WHATSAPP_AUTH_DIR=  # default: <dataDir>/whatsapp-auth
+CLAWBBER_ENABLE_WHATSAPP=false
+# CLAWBBER_WHATSAPP_AUTH_DIR=  # default: <dataDir>/whatsapp-auth
 
 # Optional Slack ingress
 SLACK_BOT_TOKEN=
@@ -39,5 +39,5 @@ DISCORD_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
 DISCORD_APPLICATION_ID=
 DISCORD_MENTION_ROLE_IDS=
-CLAWSOME_DISCORD_GATEWAY_DURATION_MS=600000
-CLAWSOME_DISCORD_GATEWAY_SECRET=
+CLAWBBER_DISCORD_GATEWAY_DURATION_MS=600000
+CLAWBBER_DISCORD_GATEWAY_SECRET=
