--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "chat": "^4.14.0",
     "commander": "^14.0.3",
     "cron-parser": "^5.5.0",
+    "qrcode-terminal": "^0.12.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.4.4",
     "@types/node": "^22.10.0",
+    "@types/qrcode-terminal": "^0.12.2",
     "bun-types": "^1.3.5",
     "typescript": "^5.9.2"
   },
