feat: rename project to BearClaw 🐻🦞
- Rename clawbber → bearclaw everywhere
- Rename CLI: clawbber → bearclaw, clawbber-ctl → bearclaw-ctl
- Rename env vars: CLAWBBER_* → BEARCLAW_*
- Rename data dir: .clawbber/ → .bearclaw/
- Update Docker label: clawbber.managed → bearclaw.managed
- Keep both bear and lobster emojis 🐻🦞

BREAKING CHANGE: All env vars, CLI commands, and data directories renamed

--- a/.env.example
+++ b/.env.example
@@ -4,31 +4,31 @@ ANTHROPIC_OAUTH_TOKEN=
 OPENAI_API_KEY=
 
 # Identity
-CLAWBBER_CHATSDK_USERNAME=mick
-CLAWBBER_CHATSDK_PORT=8787
-CLAWBBER_TRIGGER_PATTERNS=@Mick
+BEARCLAW_CHATSDK_USERNAME=mick
+BEARCLAW_CHATSDK_PORT=8787
+BEARCLAW_TRIGGER_PATTERNS=@Mick
 
 # Model
-CLAWBBER_MODEL_PROVIDER=anthropic
-CLAWBBER_MODEL=claude-sonnet-4-20250514
+BEARCLAW_MODEL_PROVIDER=anthropic
+BEARCLAW_MODEL=claude-sonnet-4-20250514
 
 # Runtime
-CLAWBBER_DATA_DIR=.clawbber
-CLAWBBER_MAX_CONCURRENCY=2
-CLAWBBER_LOG_LEVEL=info
+BEARCLAW_DATA_DIR=.bearclaw
+BEARCLAW_MAX_CONCURRENCY=2
+BEARCLAW_LOG_LEVEL=info
 
 # Containerized agent runtime
-CLAWBBER_AGENT_CONTAINER_IMAGE=clawbber-agent:latest
+BEARCLAW_AGENT_CONTAINER_IMAGE=bearclaw-agent:latest
 
 # Optional: pi auth file path (default: <dataDir>/global/auth.json)
-# CLAWBBER_AUTH_PATH=
+# BEARCLAW_AUTH_PATH=
 
 # Optional: admin caller IDs (comma-separated)
-# CLAWBBER_ADMINS=
+# BEARCLAW_ADMINS=
 
 # WhatsApp ingress (Baileys socket)
-CLAWBBER_ENABLE_WHATSAPP=false
-# CLAWBBER_WHATSAPP_AUTH_DIR=  # default: <dataDir>/whatsapp-auth
+BEARCLAW_ENABLE_WHATSAPP=false
+# BEARCLAW_WHATSAPP_AUTH_DIR=  # default: <dataDir>/whatsapp-auth
 
 # Optional Slack ingress
 SLACK_BOT_TOKEN=
@@ -39,5 +39,5 @@ DISCORD_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
 DISCORD_APPLICATION_ID=
 DISCORD_MENTION_ROLE_IDS=
-CLAWBBER_DISCORD_GATEWAY_DURATION_MS=600000
-CLAWBBER_DISCORD_GATEWAY_SECRET=
+BEARCLAW_DISCORD_GATEWAY_DURATION_MS=600000
+BEARCLAW_DISCORD_GATEWAY_SECRET=
