--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,4 +1,4 @@
-# Clawbber Agent Container
+# BearClaw Agent Container
 # Pre-built image with pi CLI and all dependencies baked in
 
 FROM oven/bun:1.3
@@ -10,7 +10,7 @@ WORKDIR /app
 
 # Copy container-entry source
 COPY src/agent/container-entry.ts /app/src/agent/container-entry.ts
-COPY src/cli/clawbber-ctl.ts /app/src/cli/clawbber-ctl.ts
+COPY src/cli/bearclaw-ctl.ts /app/src/cli/bearclaw-ctl.ts
 COPY src/types.ts /app/src/types.ts
 
 ENTRYPOINT ["bun", "run", "/app/src/agent/container-entry.ts"]
