feat: rename to Mercury 🪽
- bearclaw → mercury everywhere
- CLI: mercury, mercury-ctl
- Env: MERCURY_*
- Data dir: .mercury/
- npm: @miclivs/mercury

Swift messenger of the gods.

--- a/.env.example
+++ b/.env.example
@@ -4,31 +4,31 @@ ANTHROPIC_OAUTH_TOKEN=
 OPENAI_API_KEY=
 
 # Identity
-BEARCLAW_CHATSDK_USERNAME=mick
-BEARCLAW_CHATSDK_PORT=8787
-BEARCLAW_TRIGGER_PATTERNS=@Mick
+MERCURY_CHATSDK_USERNAME=mick
+MERCURY_CHATSDK_PORT=8787
+MERCURY_TRIGGER_PATTERNS=@Mick
 
 # Model
-BEARCLAW_MODEL_PROVIDER=anthropic
-BEARCLAW_MODEL=claude-sonnet-4-20250514
+MERCURY_MODEL_PROVIDER=anthropic
+MERCURY_MODEL=claude-sonnet-4-20250514
 
 # Runtime
-BEARCLAW_DATA_DIR=.bearclaw
-BEARCLAW_MAX_CONCURRENCY=2
-BEARCLAW_LOG_LEVEL=info
+MERCURY_DATA_DIR=.mercury
+MERCURY_MAX_CONCURRENCY=2
+MERCURY_LOG_LEVEL=info
 
 # Containerized agent runtime
-BEARCLAW_AGENT_CONTAINER_IMAGE=bearclaw-agent:latest
+MERCURY_AGENT_CONTAINER_IMAGE=mercury-agent:latest
 
 # Optional: pi auth file path (default: <dataDir>/global/auth.json)
-# BEARCLAW_AUTH_PATH=
+# MERCURY_AUTH_PATH=
 
 # Optional: admin caller IDs (comma-separated)
-# BEARCLAW_ADMINS=
+# MERCURY_ADMINS=
 
 # WhatsApp ingress (Baileys socket)
-BEARCLAW_ENABLE_WHATSAPP=false
-# BEARCLAW_WHATSAPP_AUTH_DIR=  # default: <dataDir>/whatsapp-auth
+MERCURY_ENABLE_WHATSAPP=false
+# MERCURY_WHATSAPP_AUTH_DIR=  # default: <dataDir>/whatsapp-auth
 
 # Optional Slack ingress
 SLACK_BOT_TOKEN=
@@ -39,5 +39,5 @@ DISCORD_BOT_TOKEN=
 DISCORD_PUBLIC_KEY=
 DISCORD_APPLICATION_ID=
 DISCORD_MENTION_ROLE_IDS=
-BEARCLAW_DISCORD_GATEWAY_DURATION_MS=600000
-BEARCLAW_DISCORD_GATEWAY_SECRET=
+MERCURY_DISCORD_GATEWAY_DURATION_MS=600000
+MERCURY_DISCORD_GATEWAY_SECRET=
