--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@miclivs/mercury",
+  "name": "mercury-ai",
   "version": "0.1.7",
   "description": "Personal AI assistant for chat platforms (WhatsApp, Slack, Discord)",
   "license": "MIT",
