--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chat": "^4.14.0",
     "commander": "^14.0.3",
     "cron-parser": "^5.5.0",
+    "discord.js": "^14.25.1",
     "qrcode-terminal": "^0.12.0",
     "zod": "^4.3.6"
   },
